--- a/Coursera_Capstone.ipynb
+++ b/Coursera_Capstone.ipynb
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -673,8 +673,8 @@
      "output_type": "stream",
      "text": [
       "Your credentails:\n",
-      "CLIENT_ID: BYPLANM441GICCCLM0N43LFVIHPJG5JBP0DJ5N22WWP1KKI5\n",
-      "CLIENT_SECRET:CBXHHGOM3LSOMOJ3301L3CRHBTSM1ABT4TUI3M2WTJ30URTM\n"
+      "CLIENT_ID: xxxxxxxxx\n",
+      "CLIENT_SECRET:xxxxxxxx\n"
      ]
     }
    ],
